Improved exception handling on context initialized and destroyed.