@@ -24,10 +24,6 @@
 	</properties>
 
 
-
-
-
-
 	<dependencies>
 		<dependency>
 			<groupId>oracle.communications.converged.application.server</groupId>
@@ -47,7 +43,6 @@
 		</dependency>
 		
 -->
-
 
 
 		<dependency>
@@ -237,10 +232,21 @@
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<release>11</release>
+					<compilerArgs>
+						<arg>-proc:full</arg>
+					</compilerArgs>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-enforcer-plugin</artifactId>
 				<version>3.4.1</version>
 				<executions>
-
 					<execution>
 						<id>enforce-bytecode-version</id>
 						<goals>
